# SolanaCoinPetitiveContract

./: .gitignore  .pnp.cjs  Anchor.toml  Readme.md  package-lock.json  package.json
frontend/: cleanup-users.sql  coinpetitive  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  rls-fix.sql  supabase-migration.sql  supabase-schema.sql  tailwind.config.js
frontend/app/: globals.css  layout.tsx  middleware.ts  not-found.tsx  page.tsx
frontend/components/: AdminSidebar.tsx  AlertDialog.tsx  BackButton.tsx  BetaTesterAccessModal.tsx  BetaTesterPayoutModal.tsx  CPTTicker.tsx  ClientLayout.tsx  CoinDrop.tsx  CoinpetitiveTechnicalRoadmap.tsx  CoinpetitiveTermsAndConditions.tsx  CoinpetitiveUsersRoadmap.tsx  CoinpetitiveWhitepaper.tsx  ConditionalNavbar.tsx  CreateChallengeSectionAccordion.tsx  DocsModal.tsx  FlaggedChallenge.tsx  Footer.tsx  HowItWorks.tsx  MintDisplay.tsx  Nav.tsx  RedirectHandler.tsx  (+24 more)
programs/coinpetitive/: Cargo.toml
programs/coinpetitive/src/: constraints.rs  errors.rs  instructions.rs  lib.rs  state.rs
programs/coinpetitive/src/instructions/: challenge.rs  token.rs
programs/coinpetitive/src/instructions/challenge/: challenge_tracking.rs  claim_creator_reward.rs  create_challenge.rs  distribute_voting_treasury.rs  finalize_challenge.rs  pay_participation_fee.rs  submit_video.rs  vote_for_submission.rs
programs/coinpetitive/src/instructions/token/: distribute_token.rs  fee_tracking.rs  token.rs
programs/coinpetitive/src/state/: challenge.rs  challenge_tracker.rs  fee_tracker.rs  token.rs
tests/: coinpetitive.ts
(+64 files in other folders)
