[package]
name = "coinpetitive"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "coinpetitive"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build" , "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1" , features = ["init-if-needed"]}
anchor-spl = { version = "0.30.1", features = ["metadata", "token"]}
spl-associated-token-account = "2.0.0"
mpl-token-metadata = "3.2.3"
# Pin to specific version and disable default features to avoid confidential transfer
spl-token-2022 = { version = "1.0.0", default-features = false, features = ["no-entrypoint"] }